# polkavm

services/: Cargo.toml
services/fib/: README.md  blob.pvm  fib.pvm
services/fib/src/: main.rs
services/keccak256/: Cargo.toml  blob.pvm  keccak256.pvm
services/keccak256/src/: main.rs
services/megatron/src/: main.rs
services/priviliged/: Cargo.toml  blob.pvm  priviliged.pvm
services/priviliged/src/: main.rs
services/sha256/: Cargo.toml
services/sha256/src/: main.rs
services/test_export/: Cargo.toml  blob.pvm  priviliged.pvm  test_export.pvm
services/test_export/src/: main.rs
services/tribonacci/: blob.pvm  tribonacci.pvm
services/tribonacci/src/: main.rs
tools/polkatool/src/: main.rs
